# djinsight

./: .gitignore  CHANGELOG.md  pyproject.toml
djinsight/: __init__.py  celery.py  conf.py  tasks.py
djinsight/locale/pl/LC_MESSAGES/: django.mo  django.po
djinsight/mcp/: utils.py
djinsight/providers/: redis.py
djinsight/templates/djinsight/: tracking_script.html
djinsight/tests/: test_mcp_server.py  test_mcp_utils.py
djinsight/wagtail/: apps.py  panels.py  reports.py  wagtail_hooks.py
djinsight/wagtail/static/djinsight/wagtail/css/: analytics.css
djinsight/wagtail/templates/djinsight/wagtail/panels/: analytics_panel.html  summary_item.html
djinsight/wagtail/templates/djinsight/wagtail/reports/: analytics_dashboard.html  page_views.html  page_views_results.html  traffic_sources.html
djinsight/wagtail/templates/djinsight/wagtail/reports/partials/: _traffic_devices.html
examples/django/blog/: admin.py  models.py  urls.py  views.py
examples/django/blog/migrations/: 0001_initial.py
examples/django/blog/templates/blog/: post_detail.html  post_list.html
examples/django/example_project/: asgi.py  settings.py  urls.py  wsgi.py
examples/wagtail/config/: settings.py  urls.py
examples/wagtail/home/: models.py
examples/wagtail/home/management/commands/: setup_demo.py
examples/wagtail/home/migrations/: 0001_initial.py
examples/wagtail/home/templates/home/: blog_page.html  home_page.html
tests/: settings.py
